// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow snapshot 1`] = `
<div>
  <Connect(MetaTags)
    description="Yet another webapp based on Topcoder React Starter Kit"
    title="Topcoder React Starter"
  />
  <Routes />
</div>
`;

exports[`Matches shallow snapshot in dev mode 1`] = `
<div>
  <Connect(MetaTags)
    description="Yet another webapp based on Topcoder React Starter Kit"
    title="Topcoder React Starter"
  />
  <Routes />
  <DevTools />
</div>
`;
